2013-02-28  Xan Lopez  <xlopez@rim.com>

        [BlackBerry] DumpRenderTreeSupport: update the set position methods
        https://bugs.webkit.org/show_bug.cgi?id=110578

        Reviewed by Rob Buis.

        TestRunner::setMockGeolocationPosition() changed in r130416:
        http://trac.webkit.org/changeset/130416/trunk/Tools/DumpRenderTree/TestRunner.h

        DumpRenderTreeSupport::setMockGeolocationError() was renamed to
        setMockGeolocationPositionUnavailableError() in r129444:
        http://trac.webkit.org/changeset/129444/trunk/Source/WebKit/blackberry/WebKitSupport/DumpRenderTreeSupport.h

        * DumpRenderTree/blackberry/TestRunnerBlackBerry.cpp:
        (TestRunner::setMockGeolocationPosition):
        (TestRunner::setMockGeolocationPositionUnavailableError):

2013-02-28  Xan Lopez  <xlopez@rim.com>

        [BlackBerry] WorkQueueItemBlackBerry: use the new FrameLoader API
        https://bugs.webkit.org/show_bug.cgi?id=110465

        Reviewed by Rob Buis.

        * DumpRenderTree/blackberry/WorkQueueItemBlackBerry.cpp:
        (LoadItem::invoke):

2013-02-27  Ryosuke Niwa  <rniwa@webkit.org>

        PerfTestRunner doesn't need _needs_http and _has_http_lock
        https://bugs.webkit.org/show_bug.cgi?id=111037

        Reviewed by Adam Barth.

        Delete these variables in favor of using a local variable.

        Member variables are like global variables. They introduce implicit dependencies
        between member functions.

        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
        (PerfTestsRunner.__init__):
        (PerfTestsRunner._start_http_servers):
        (PerfTestsRunner):
        (PerfTestsRunner._stop_http_servers):
        (PerfTestsRunner.run):

2013-02-27  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r144224.
        http://trac.webkit.org/changeset/144224
        https://bugs.webkit.org/show_bug.cgi?id=111045
