@@ -1,3 +1,12 @@
+2013-02-28  Alberto Garcia  <albgarcia@rim.com>
+
+        [BlackBerry] TestRunnerBlackBerry: remove layerTreeAsText, it's gone from upstream
+        https://bugs.webkit.org/show_bug.cgi?id=110464
+
+        Reviewed by Rob Buis.
+
+        * DumpRenderTree/blackberry/TestRunnerBlackBerry.cpp:
+
 2013-02-28  Xan Lopez  <xlopez@rim.com>
 
         [BlackBerry] DumpRenderTreeSupport: update the set position methods
